[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devlon <devlon@Devlons-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
